@@ -13,11 +13,11 @@
             <label index="tt_content.pi1_flexform.display_mode">Display mode</label>
             <label index="tt_content.pi1_flexform.display_mode.1">Default</label>
             <label index="tt_content.pi1_flexform.display_mode.3">Create</label>
-	    <label index="tt_content.pi1_flexform.display_mode.4">Delete</label>
+			<label index="tt_content.pi1_flexform.display_mode.4">Delete</label>
             <label index="tt_content.pi1_flexform.display_mode.5">Invite</label>
             <label index="tt_content.pi1_flexform.display_mode.7">Edit</label>
-	    <label index="tt_content.pi1_flexform.display_mode.8">Setfixed</label>
-	    <label index="tt_content.pi1_flexform.display_mode.9">Infomail</label>
+			<label index="tt_content.pi1_flexform.display_mode.8">Setfixed</label>
+			<label index="tt_content.pi1_flexform.display_mode.9">Infomail</label>
             <label index="fe_users.cnum">Customer Number:</label>
             <label index="fe_users.static_info_country">Country Code:</label>
             <label index="fe_users.zone">State/province:</label>
